test/parse_error/pe_2.c0
int main() {
    for (a = 0; ; ) {
        a = ;
    }
}
